--- a/configmap.yaml
+++ b/configmap.yaml
@@ -1,8 +1,6 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: env-vars
+  name: cluster-info
 data:
-  CLUSTER_ID: "${ .ClusterLabels.cluster-id }"
-  ENVIRONMENT: "${ .ClusterLabels.environment }"
-  REGION: "${ .ClusterLabels.region }"
+  clusterDisplayName: "${ get .ClusterLabels 'management.cattle.io/cluster-display-name' }"
