--- a/fleet.yaml
+++ b/fleet.yaml
@@ -5,4 +5,4 @@ helm:
   version: "0.1.0"
   values:
     env:
-      CLUSTER_DISPLAY_NAME: "${ .ClusterLabels['management.cattle.io/cluster-display-name'] }"
+      CLUSTER_DISPLAY_NAME: "${ .ClusterLabels.management.cattle.io/cluster-display-name }"
