--- a/fleet.yaml
+++ b/fleet.yaml
@@ -4,5 +4,4 @@ helm:
   releaseName: my-fleet-release
   version: "0.1.0"
   values:
-    env:
-      CLUSTER_DISPLAY_NAME: "${ .ClusterLabels.management.cattle.io/cluster-display-name }"
+    location: global.fleet.clusterLabels.management.cattle.io/cluster-display-name
